# linux-package-builder

./: .clang-format  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
src/: src.cmake
src/common/: common.cmake  defines.h  log.c  log.h  qlog.cc  qlog.h  storage.cc  storage.h  types.h
src/daemon/: daemon.cc  daemon.cmake  daemon.h  main.cc  server-rpc.cc  server-rpc.h
